<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result_decimal"
        android:text="@string/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:gravity="end"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/result_binary"
        android:text="@string/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:gravity="end"
        android:singleLine="true"
        android:ellipsize="start"
        android:layout_below="@id/result_decimal"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_binary"
        android:rowCount="4"
        android:columnCount="4"
        android:gravity="center">

        <Button
            android:text="@string/zero"
            android:layout_column="0"
            android:layout_row="0"
            android:onClick="onEnterZero"/>

        <Button
            android:text="@string/one"
            android:layout_column="1"
            android:layout_row="0"
            android:onClick="onEnterOne"/>

        <Button
            android:text="@string/clear"
            android:layout_column="2"
            android:layout_row="0"
            android:onClick="onClear"/>

        <Button
            android:text="@string/ac"
            android:layout_column="3"
            android:layout_row="0"
            android:onClick="onAllClear"/>

        <Button
            android:text="@string/and"
            android:layout_column="0"
            android:layout_row="1"
            android:onClick="computeAnd"/>

        <Button
            android:text="@string/or"
            android:layout_column="1"
            android:layout_row="1"
            android:onClick="computeOr"/>

        <Button
            android:text="@string/add"
            android:layout_column="2"
            android:layout_row="1"
            android:onClick="computeAdd"/>

        <Button
            android:text="@string/sub"
            android:layout_column="3"
            android:layout_row="1"
            android:onClick="computeSub"/>

        <Button
            android:text="@string/not"
            android:layout_column="0"
            android:layout_row="2"
            android:onClick="computeNot"/>

        <Button
            android:text="@string/xor"
            android:layout_column="1"
            android:layout_row="2"
            android:onClick="computeXor"/>

        <Button
            android:text="@string/mult"
            android:layout_column="2"
            android:layout_row="2"
            android:onClick="computeMult"/>

        <Button
            android:text="@string/mod"
            android:layout_column="3"
            android:layout_row="2"
            android:onClick="computeMod"/>

        <Button
            android:text="@string/nand"
            android:layout_column="0"
            android:layout_row="3"
            android:onClick="computeNand"/>

        <Button
            android:text="@string/nor"
            android:layout_column="1"
            android:layout_row="3"
            android:onClick="computeNor"/>

        <Button
            android:text="@string/nxor"
            android:layout_column="2"
            android:layout_row="3"
            android:onClick="computeNxor"/>

        <Button
            android:text="@string/equal"
            android:layout_column="3"
            android:layout_row="3"
            android:onClick="calculate"/>

    </GridLayout>

</RelativeLayout>
